--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -28,6 +28,7 @@
 !reaction-i18n
 !reaction-dashboard
 !reaction-orders
+!reaction-taxes
 
 # For some reason the above inverse ignore rules don't play well with some
 # editors, so we also add inverse ignore rules for their subdirectories.
@@ -57,3 +58,4 @@
 !reaction-i18n/*
 !reaction-dashboard/*
 !reaction-orders/*
+!reaction-taxes/*
