updated tax schemas
- basic input of new tax rates in sidebar
- taxes/addRate method
- testing griddle react component
- wiring for TaxJar, Avatar, TaxCloud methods

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "dependencies": {
     "bunyan": "^1.8.0",
     "bunyan-format": "0.2.1",
+    "griddle-react": "^0.5.1",
     "meteor-node-stubs": "^0.2.1",
-    "react": "15.0.1",
-    "react-dom": "15.0.1"
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
+    "react-addons-pure-render-mixin": "15.0.2"
   }
 }
